# dune-stuff

./: .astylerc  .clang-format  .gitattributes  .mailmap  .pylicense-other.cfg  .pylicense-tex.cfg  CMakeLists.txt  CONTRIBUTING.md  COPYING  Doxyfile.in  LICENSE  Makefile.am  README.md  autogen.sh  config.h.cmake  configure.ac  dummy  dune-stuff-config.cmake.in  dune-stuff.pc.in  dune.module  dune_stuff.cc  stamp-vc  switch-build_dir  uncrustify.cfg
cmake/: UseLATEX.cmake  (+8 more)
dune/stuff/: CMakeLists.txt  Makefile.am  aliases.hh  configcontainer.hh  discretegradientpass.hh  enable_dune_warnings.hh  fem.hh  femeoc.hh  filesystem.hh  function.hh  functions.cc  functions.hh  localmassmatrix.hh  misc.hh  profiler.hh  progressbar.hh  python_bindings.cc  restrict_prolong.hh  validation.hh  version.hh.in
dune/stuff/common/: Makefile.am  algorithm.hh  color.cc  color.hh  compiler.hh  configcontainer.cc  configcontainer.hh  configtree.hh  configuration.cc  configuration.hh  convergence-study.cc  convergence-study.hh  crtp.hh  debug.hh  deprecated.hh  disable_warnings.hh  exceptions.hh  executiontimer.hh  filesystem.cc  filesystem.hh  fixed_map.hh  float_cmp.hh  float_cmp_internal.hh  float_cmp_style.hh  fmatrix.hh  fvector.hh  localization-study.cc  localization-study.hh  localmatrix_proxy.hh  logging.cc  logging.hh  logstreams.cc  logstreams.hh  loop_timer.hh  math.cc  math.hh  matrix.hh  matrix_patterns.hh  memory.hh  misc.cc  (+27 more)
dune/stuff/common/header/: disable_warnings.hh  enable_warnings.hh  reenable_warnings.hh
dune/stuff/common/parallel/: helper.cc  helper.hh  partitioner.hh  threadmanager.cc  threadmanager.hh  threadstorage.hh
dune/stuff/common/parameter/: configcontainer.cc  configcontainer.hh  container.hh  tree.cc  tree.hh  validation.hh
dune/stuff/discretefunction/: Makefile.am  norm.hh
dune/stuff/discretefunction/projection/: Makefile.am  custom.hh  dirichlet.hh  heterogenous.hh  lagrange.hh
dune/stuff/expressions/: mathexpr.cpp
dune/stuff/fem/: Makefile.am  adaption.hh  customprojection.hh  discretegradientpass.hh  error.hh  femeoc.cc  femeoc.hh  file_io.hh  functionadapter.hh  functions.hh  localmassmatrix.hh  localmatrix_proxy.hh  magnitudefunction.hh  matrix_object.hh  namespace.hh  preconditioning.hh  print.hh  restrict_prolong.hh  timefunction.hh
dune/stuff/fem/functions/: Makefile.am  analytical.hh  checks.hh  integrals.hh  magnitude.hh  timefunction.hh  transform.hh
dune/stuff/function/: Makefile.am  checkerboard.hh  constant.hh  expression.hh  fixed.hh  fromfile.hh  interface.hh  local.hh  product.hh  spe10.hh
dune/stuff/function/affineparametric/: checkerboard.hh  coefficient.hh  default.hh
dune/stuff/function/expression/: Makefile.am  base.hh  mathexpr.cc  mathexpr.hh
dune/stuff/function/nonparametric/: checkerboard.hh  expression.hh
dune/stuff/functions/: ESV2007.hh  affine.hh  checkerboard.cc  checkerboard.hh  combined.hh  composition.hh  constant.cc  constant.hh  default.hh  derived.hh  expression.cc  expression.hh  femadapter.hh  fixed.hh  flattop.hh  fromfile.hh  global.hh  indicator.hh  interfaces.cc  interfaces.hh  linear.hh  local.hh  norm.hh  pdelabadapter.hh  product.hh  random_ellipsoids_function.hh  reinterpret.hh  spe10.cc  spe10.hh  spe10model2.hh  time.hh  visualization.hh
dune/stuff/functions/expression/: Makefile.am  base.hh  mathexpr.cc  mathexpr.hh
dune/stuff/grid/: Makefile.am  boundaryinfo.hh  entity.hh  fakeentity.cc  fakeentity.hh  information.hh  intersection.hh  layers.hh  partview.hh  periodicview.hh  provider.hh  ranges.hh  search.hh  structuredgridfactory.hh  tikz.hh  walk.hh  walk_functors.hh  walker.hh
dune/stuff/grid/output/: Makefile.am  entity_visualization.hh  pgf.hh
dune/stuff/grids/: fakeentity.cc  information.hh  provider.hh  tikz.hh  walk_functors.hh
dune/stuff/la/: CMakeLists.txt  container.hh  solver.hh
dune/stuff/localfunction/: interface.hh
dune/stuff/projection/: Makefile.am  custom.hh  dirichlet.hh
dune/stuff/test/: .gitignore  CMakeLists.txt  Makefile.am  common.cxx  common.hh  common_algorithm.cc  common_color.cc  common_configtree.cc  common_configuration.cc  common_fixed_map.cc  common_float_cmp.cc  common_logger.cc  common_math.cc  common_parallel.cc  common_parameter_configcontainer.cc  common_parameter_vaalidation.cc  common_parameter_validation.cc  common_print.cc  common_profiler.cc  common_ranges.cc  common_ranges.mini  common_string.cc  common_timedlogging.cc  common_tmp-storage.cc  common_tuple.cc  common_typenames.cc  common_validation.cc  compile_pgf_output.sh  df_heterogenous_projection.cc  dgf_1d_interval.dgf  dgf_2d_interval.dgf  dgf_3d_interval.dgf  dgf_4d_interval.dgf  diffusion_tensor.txt  empty.cc  fem_error.cc  fem_projection.cc  float_cmp.hh  function.cc  function.hh  (+46 more)
examples/grid/: CMakeLists.txt  Makefile.am  providers.cc  unitcube1d.cel  unitcube1d.geo  unitcube1d.msh  unitcube1d.vrt  unitcube2d.cel  unitcube2d.geo  unitcube2d.msh  unitcube2d.vrt  unitcube3d.cel  unitcube3d.geo  unitcube3d.msh  unitcube3d.vrt
examples/grid/provider/: cube.cc
lib/: CMakeLists.txt  Makefile.am
m4/: Makefile.am  ax_boost_base.m4  ax_boost_chrono.m4  ax_boost_date_time.m4  ax_boost_filesystem.m4  ax_boost_system.m4  ax_boost_timer.m4  ax_cxx_compile_stdcxx_11.m4  ax_cxx_supports_override_final.m4  ax_python_devel.m4  cxx0x_begin_end.m4  cxx0x_constexpr.m4  cxx0x_lambdas.m4  dune-stuff.m4
stuff/: Makefile.am  adaption.hh  color.hh  colortest.cc  configcontainer.hh  customprojection.hh  datawriter.hh  debug.hh  deprecated.hh  disable_dune_warnings.hh  discretegradientpass.hh  enable_dune_warnings.hh  error.hh  executiontimer.hh  femeoc.hh  filesystem.hh  functionadapter.hh  functions.hh  grid.hh  headertest.cc  helperclass.hh  localmassmatrix.hh  localmatrix_proxy.hh  logging.hh  magnitudefunction.hh  math.hh  matrix.hh  matrix_patterns.hh  mem_debug.hh  misc.hh  mixins.hh  parametercontainer.hh  parameterhandler.hh  postprocessing.hh  preconditioning.hh  printing.hh  profiler.hh  progressbar.hh  restrict_prolong.hh  runinfo.hh  (+9 more)
stuff/expressions/: mathexpr.cpp  mathexpr.h
(+129 files in other folders)
