# -*- tab-width: 8 -*-
# vi: set ts=8:
# $Id$

ALLM4S = 					\
	cxx0x_lambdas.m4			\
	cxx0x_begin_end.m4			\
	cxx0x_constexpr.m4			\
  ax_boost_base.m4 \
  ax_boost_filesystem.m4 \
	dune-stuff.m4				

aclocaldir = $(datadir)/aclocal
aclocal_DATA = $(ALLM4S)

EXTRA_DIST = $(ALLM4S)

include $(top_srcdir)/am/global-rules
