# -*- tab-width: 8 -*-
# vi: set ts=8:
# $Id$

ALLM4S = 					\
  ax_cxx_compile_stdcxx_11.m4 \
  ax_cxx_supports_override_final.m4 \
  ax_boost_base.m4 \
  ax_boost_filesystem.m4 \
  dune-stuff.m4				

aclocaldir = $(datadir)/aclocal
aclocal_DATA = $(ALLM4S)

EXTRA_DIST = $(ALLM4S)

include $(top_srcdir)/am/global-rules
