# This file is part of the dune-stuff project:
#   https://github.com/wwu-numerik/dune-stuff
# Copyright holders: Rene Milk, Felix Schindler
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

ALLM4S = 					\
  ax_cxx_compile_stdcxx_11.m4 \
  ax_cxx_supports_override_final.m4 \
  ax_python_devel.m4 \
  ax_boost_base.m4 \
  ax_boost_filesystem.m4 \
  ax_boost_python.m4 \
  dune-stuff.m4				

aclocaldir = $(datadir)/aclocal
aclocal_DATA = $(ALLM4S)

EXTRA_DIST = $(ALLM4S)

include $(top_srcdir)/am/global-rules
