# This file is part of the dune-stuff project:
#   http://users.dune-project.org/projects/dune-stuff
# Copyright holders: Rene Milk, Felix Schindler
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

projection_includedir = $(includedir)/dune/stuff/discretefunction/projection
projection_include_HEADERS = dirichlet.hh

include $(top_srcdir)/am/global-rules
