# This file is part of the dune-stuff project:
#   http://users.dune-project.org/projects/dune-stuff
# Copyright holders: Rene Milk, Felix Schindler
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

SUBDIRS = 

fem_includedir = $(includedir)/dune/stuff/fem

include $(top_srcdir)/am/global-rules
