# This file is part of the dune-stuff project:
#   http://users.dune-project.org/projects/dune-stuff
# Copyright holders: Rene Milk, Felix Schindler
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

providerdir = $(includedir)/dune/rb/grid/provider
provider_HEADERS = cornerpoint.hh cube.hh interface.hh

include $(top_srcdir)/am/global-rules

